--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# =========================
+# Node.js / Web (Vite, React)
+# =========================
 # Logs
 logs
 *.log
@@ -7,16 +10,70 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# Dependencies
+node_modules/
+jspm_packages/
+.npm
+
+# Build directories
 dist
 dist-ssr
+build/
+out/
+
+# Env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 *.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# =========================
+# iOS / Xcode (Swift, watchOS)
+# =========================
+# Build and DerivedData
+build/
+DerivedData/
+*.moved-aside
+*.xcuserstate
+
+# CocoaPods
+Pods/
+*.xcworkspace/xcuserdata
+
+# Carthage
+Carthage/Build/
+
+# Swift Package Manager
+.build/
+.swiftpm/
+
+# =========================
+# macOS
+# =========================
 .DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# =========================
+# VS Code / IDEs
+# =========================
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
